--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Hello -->
     <header class="header" id="header">
-        <a href="index.html" class="logo"><span class="main-icon"></span><span>Riton</span></a>
+        <a href="index.html" class="logo"><span class="main-icon"></span><span>Amit Kumar😊</span></a>
 
         <div class="navbar">
             <a href="index.html" class="active">Home</a>
@@ -44,7 +44,7 @@
                     <img src="Assets/main-image.jpg" alt="">
                 </div>
                 <div class="column left">
-                    <div class="text">I'm Riton and I'm a <span id="typed" class="iAm"></span></div>
+                    <div class="text">I'm Amit and I'm a <span id="typed" class="iAm"></span></div>
                     <p>
                         A 20-year-old Web Developer with a deep passion for crafting elegant and user-friendly websites.
                         With a creative mindset and strong technical skills, I specialize in turning web
@@ -61,7 +61,7 @@
 
         <footer class="footer">
             <div class="left">
-                &copy; 2023 • R. Charlox • All Rights Reserved
+                &copy; 2023 • A. Kumar • All Rights Reserved
             </div>
             <div class="right">
                 <div class="social"><a href="https://www.facebook.com/ritoncharlox" target="_blank"><i
