--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Hello -->
     <header class="header" id="header">
-        <a href="index.html" class="logo"><span class="main-icon"></span><span>Amit Kumar😊</span></a>
+        <a href="index.html" class="logo"><span class="main-icon"></span><span>J.K😊</span></a>
 
         <div class="navbar">
             <a href="index.html" class="active">Home</a>
