--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="Assets/main-image.jpg" alt="">
                 </div>
                 <div class="column left">
-                    <div class="text">I'm Amit and I'm a <span id="typed" class="iAm"></span></div>
+                    <div class="text">I'm J.K and I'm a <span id="typed" class="iAm"></span></div>
                     <p>
                         A 20-year-old Web Developer with a deep passion for crafting elegant and user-friendly websites.
                         With a creative mindset and strong technical skills, I specialize in turning web
